--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "axios": "^1.7.7",
     "expo-linear-gradient": "^13.0.2",
+    "formik": "^2.4.6",
     "react": "18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.75.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-form": "^2.1.3",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-svg": "^15.6.0",
     "react-native-vector-icons": "^10.1.0"
